Fixed <pre> overflow issue

--- a/static/index.css
+++ b/static/index.css
@@ -72,6 +72,7 @@ strong {
 }
 
 pre {
+	overflow-y: scroll;
         background-color: #111111;
 	font-family: monospace;
         padding: 20px;
